--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,4 +9,6 @@
 
 // Your CSS partials
 @import "components/index";
+@import "components/banner";
+@import "components/card";
 @import "pages/index";
