--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,11 +1,16 @@
-<h1> Save any kind of Movies</h1>
-
+<div class="home-banner"><h1> Save any kind of Movies</h1>
+</div>
 
 <h2> My lists </h2>
-<ul>
-  <% @lists.each do |list| %>
-    <li><%= link_to list.name, list_path(list)%></li>
-  <% end %>
-</ul>
 
-<%= link_to "Create a Movie List", lists_new_path%>
+<%= link_to "Create a Movie List", new_list_path%>
+
+<div class="container">
+  <div class="row">
+  <ul>
+    <% @lists.each do |list| %>
+      <li><div class="card-list" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)"><%= link_to list.name, list_path(list)%></div></li>
+    <% end %>
+  </ul>
+  </div>
+</div>
