--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,9 +1,12 @@
 <h2>Create a new list</h2>
 
-<%= simple_form_for(@list) do |f| %>
-  <%= f.input :name %>
-  <%= f.submit %>
-<% end %>
+  <div class="row">
+    <div class="col-12">
+      <%= simple_form_for(@list) do |f| %>
+        <%= f.input :name, placeholder: 'Add a list name' %>
+        <%= f.submit "Create", class: "btn btn-primary" %>
+      <% end %>
+    </div>
 
 <br>
 <%= link_to "↩️ Back to list all", lists_path(@list) %>
